Fixed alignment bug in ForeFox

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ a {
 div.header {
     display: block;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 64px;
     z-index: 10;
     background: #3F51B5;
